--- a/styles/header.css
+++ b/styles/header.css
@@ -56,3 +56,18 @@
 .container__botao {
     display: none;
 }
+
+.imagem1{
+    padding: 10px;
+    width: 20%;
+}
+
+.imagem2{
+    padding: 10px;
+    width: 20%;
+}
+
+.imagem3{
+    padding: 10px;
+    width: 20%;
+}
